Fixed spacing issue on the api pages

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -90,5 +90,9 @@ option {
 }
 
 .api-max-width {
-  max-width: 1800px;
+  max-width: 1600px;
+}
+
+.endpoint-card {
+  @apply border-b dark:border-zinc-700 last-of-type:border-0 pt-6 first:pt-0 md:py-10 lg:py-20;
 }
